<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_surprise"
        android:layout_width="0dp"
        android:layout_height="@dimen/feeling_height"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_surprise"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sadness"
        app:layout_constraintEnd_toStartOf="@+id/button_angry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_love"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/button_joy"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_joy"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_love"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/button_love"
        android:layout_width="0dp"
        android:layout_height="@dimen/feeling_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_love"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button_joy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/button_angry"
        android:layout_width="0dp"
        android:layout_height="@dimen/feeling_height"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_anger"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_surprise"
        app:layout_constraintTop_toBottomOf="@+id/button_joy"
        app:layout_constraintVertical_bias="0.536" />

    <Button
        android:id="@+id/button_sadness"
        android:layout_width="0dp"
        android:layout_height="@dimen/feeling_height"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_sadness"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_fear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_fear"
        android:layout_width="0dp"
        android:layout_height="@dimen/feeling_height"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:onClick="sendFeeling"
        android:text="@string/feeling_fear"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sadness" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="153dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:gravity="fill_vertical"
        android:onClick="openMenu"
        android:text="@string/button_menu"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>