<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeStatisticsActivity">

    <TextView
        android:id="@+id/title_stats"
        android:layout_width="213dp"
        android:layout_height="69dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/stats"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stats_love_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_love"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_love"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stats_joy_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_joy"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_joy"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stats_surprise_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_surprise"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_surprise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/stats_anger_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_anger"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_anger"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stats_sadness_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_sadness"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_sadness"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stats_fear_pr"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:gravity="center"
        android:text="@string/feeling_fear"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_fear"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/count_love"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_love_pr"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count_joy"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_joy_pr"
        app:layout_constraintTop_toBottomOf="@+id/count_love" />

    <EditText
        android:id="@+id/count_surprise"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_surprise_pr"
        app:layout_constraintTop_toBottomOf="@+id/count_joy" />

    <EditText
        android:id="@+id/count_anger"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_anger_pr"
        app:layout_constraintTop_toBottomOf="@+id/count_surprise" />

    <EditText
        android:id="@+id/count_sadness"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_sadness_pr"
        app:layout_constraintTop_toBottomOf="@+id/count_anger" />

    <EditText
        android:id="@+id/count_fear"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stats_fear_pr"
        app:layout_constraintTop_toBottomOf="@+id/count_sadness" />

</android.support.constraint.ConstraintLayout>